--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 <html>
 <head>
 <title>HTML5 + REST Hello World</title>
-<p> This title triggered a new build </p>
+<p> A example to show Matt how CI/CD works </p>
 <link rel="stylesheet" href="css/styles.css"/>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript">
