CDK changes to test

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 <html>
 <head>
 <title>HTML5 + REST Hello World</title>
-<p> A new test for a new machine - test1 </p>
+<p> A new test for CDK </p>
 <link rel="stylesheet" href="css/styles.css"/>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript">
