--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,7 +36,7 @@ $( document ).ready( function() {
             return;
         }
         //console.log("clicked: " + name);
-        $.ajax( '10.50.0.53/getip' + name, {
+        $.ajax( '10.50.0.53/api/getip' + name, {
             dataType:'json',
             data:{},
             type:'GET',
