--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@ $( document ).ready( function() {
             data:{},
             type:'GET',
             success:function ( data ) {
-                //console.log("success: " + data.result);
+                console.log("success: " + data.result);
                 $( '#result' ).text( data.result );
             }
         })
